@@ -1,3 +1,9 @@
+2006-08-13  Michael Schlenker <mic42@users.sourceforge.net>
+	
+	* asn.tcl : Fixed Tcllib Bug [1539479]. Package version 
+	  asn.test: raised to 0.5.2. Added smoketest for the bug.
+	  Thanks to Pierre David for finding this.
+
 2006-03-22  Michael Schlenker <mic42@users.sourceforge.net>
 	
 	* asn.tcl:	Removed dependency on the log package to fix
